syntax = 'proto3';
package pushnotifications;

message Empty {}

message ModuleActivationResponse {
  enum ActivationResponse {
    ALREADY_ACTIVATED = 0;
    ACTIVATED = 1;
  }
  ActivationResponse status = 1;
}

message SetConfigRequest {
  string newConfig = 1;
}

message SetConfigResponse {
  string updatedConfig = 1;
}

message SetNotificationTokenRequest {
  string token = 1;
  string platform = 2;
  string userId = 3;
}

message SetNotificationTokenResponse {
  string newTokenDocument = 1;
}

message GetNotificationTokensRequest {
  string userId = 1;
}

message GetNotificationTokensResponse {
  repeated string tokenDocuments = 1;
}

message SendNotificationRequest {
  string sendTo = 1;
  string title = 2;
  optional string body = 4;
  optional string data = 5;
  optional string platform = 3;
}

message SendNotificationToManyDevicesRequest {
  repeated string sendTo = 1;
  string title = 2;
  optional string body = 3;
  optional string data = 4;
  optional string platform = 5;
}

message SendManyNotificationsRequest {
  repeated SendNotificationRequest notifications = 1;
}

message SendNotificationResponse {
  string message = 1;
}

service PushNotifications {
  rpc ActivateModule(Empty) returns (ModuleActivationResponse);
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
  rpc SetNotificationToken(SetNotificationTokenRequest) returns (SetNotificationTokenResponse);
  rpc GetNotificationTokens(GetNotificationTokensRequest) returns (GetNotificationTokensResponse);
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
  rpc SendNotificationToManyDevices(SendNotificationToManyDevicesRequest) returns (SendNotificationResponse);
  rpc sendManyNotifications(SendManyNotificationsRequest) returns (SendNotificationResponse);
}
